# vantascope

./: .gitignore  =1.3.0  README.md  fix_memory.py  pyproject.toml  run_vantascope.py
config/: datasets.yaml  datasets_real.yaml
scripts/: benchmark_data_loading.py  check_dataset_size.py  create_test_samples.py  debug_data_structure.py  debug_dft_structure.py  debug_energy_values.py  debug_file_paths.py  debug_getitem.py  debug_h5_structure.py  download_datasets.py  evaluate_model.py  explore_graph_details.py  explore_graph_details_fixed.py  explore_graphene_data.py  explore_model_outputs.py  find_max_batch_size.py  fix_dataset_for_extracted.py  fix_load_h5_file.py  fix_load_h5_file_v2.py  test_autoencoder.py  test_complete_training_pipeline.py  test_data_loader.py  test_dft_dataset.py  test_dft_loader.py  test_dft_model_integration.py  test_dinov2.py  test_direct_loading.py  test_energy_loading.py  test_enhanced_losses.py  test_extracted_loading.py  test_file_reading_only.py  test_fixed_dataset.py  test_full_pipeline.py  test_full_pipeline_debug.py  test_fuzzy_gat.py  test_gaussian_splatting.py  test_graph_visualization.py  test_integrated_model.py  test_integration.py  test_loss_function.py  (+14 more)
src/vantascope/: config.py
src/vantascope/analysis/: __init__.py  linguistic_engine.py
src/vantascope/interface/: __init__.py  streamlit_app.py  vantascope_app.py  vantascope_demo.py  vantascope_pro.py
src/vantascope/training/: enhanced_losses.py  losses.py  trainer.py
src/vantascope/utils/: helpers.py  logging.py  model_loader.py  viz.py
(+14 files in other folders)
